# testTaskApplications

./: .envExample  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: __main__.py  config.py
src/adapters/: paginator.py
src/adapters/common/: dao.py  mapper.py  producer.py
src/adapters/kafka/: producer.py
src/adapters/sqlalchemy/: dao.py  main.py  mapper.py  models.py
src/adapters/sqlalchemy/alembic/: env.py
src/adapters/sqlalchemy/alembic/versions/: 2a4aa86a4253_эиницализация_мигараций.py
src/controllers/: main.py
src/controllers/applications/: router.py
src/controllers/applications/schemas/: request.py  response.py
src/controllers/di/: providers.py  services.py
src/interactors/applications/: dto.py  interactor.py
src/interactors/common/: dto.py  interactor.py
